RESOLVED FIXED24417
[GTK] WebKitDownload's _cancel and _dispose methods may emit warnings
https://bugs.webkit.org/show_bug.cgi?id=24417
Summary [GTK] WebKitDownload's _cancel and _dispose methods may emit warnings
Gustavo Noronha (kov)
Reported 2009-03-05 17:54:09 PST
Those calls deal with the GTimer used to keep information about download elapsed time, but the timer may never get initialized if _start is not called. If nothing handles the download-requested signal, for example, this will emit nasty warning/critical messages in the terminal.
Attachments
proposed fix (1.97 KB, patch)
2009-03-05 17:54 PST, Gustavo Noronha (kov)
mrowe: review+
Gustavo Noronha (kov)
Comment 1 2009-03-05 17:54:38 PST
Created attachment 28343 [details] proposed fix
Mark Rowe (bdash)
Comment 2 2009-03-05 20:32:27 PST
Comment on attachment 28343 [details] proposed fix r=me. "existence" is misspelt in the ChangeLog, the comma is unnecessary there too, and perhaps the comments in the code could be a little more consistent (exists vs non-NULL).
Gustavo Noronha (kov)
Comment 3 2009-03-06 05:24:54 PST
Landed as r41478.
Note You need to log in before you can comment on or make changes to this bug.